--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "mesh-cli-demo",
-  "version": "1.0.0",
-  "description": "Demo project showing how to install and use the Mesh CLI",
-  "private": true,
+  "name": "@instruxi-io/mesh-sdk-cli",
+  "version": "0.4.0",
+  "description": "Command Line Interface for Mesh SDK",
+  "main": "dist/index.js",
+  "bin": {
+    "mesh": "dist/index.js"
+  },
   "scripts": {
-    "auth:login": "mesh auth login",
-    "auth:account": "mesh auth account",
-    "admin:list-tenants": "mesh admin list-tenants",
-    "auth:authorize": "mesh auth authorize --file ./scenarios/auth_authorize.json",
-    "auth:authorize-batch": "mesh auth authorize-batch --file ./scenarios/auth_authorize_batch.json",
-    "admin:create-tenant": "mesh admin create-tenant --file ./scenarios/admin_create_tenant.json",
-    "storage:create-bucket": "mesh storage create-bucket --file ./scenarios/storage_create_bucket.json"
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "mesh",
-    "cli",
-    "demo"
+    "sdk",
+    "cli"
   ],
   "author": "Instruxi",
   "license": "ISC",
   "dependencies": {
-    "@instruxi-io/mesh-cli": "^0.3.0"
+    "@instruxi-io/mesh-sdk-core": "^5.53.0",
+    "chalk": "^4.1.2",
+    "commander": "^11.0.0",
+    "dotenv": "^16.3.1",
+    "inquirer": "^8.2.5",
+    "keytar": "^7.9.0",
+    "ora": "^5.4.1",
+    "viem": "^2.29.2"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^8.2.6",
+    "@types/node": "^20.4.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
